Styling adjustments to prevent text overlapping the iframe

--- a/src/components/GameDemo/styles.module.scss
+++ b/src/components/GameDemo/styles.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: flex-start;
   width: 100%;
-  height:56vh;
+  height:55.2vh;
 }
 
 .gameContainer {
